--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="Hotel Cães, Hospedagem de cães, Tia Renata, Hotel">
     <title>Acãochego</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/gallery.theme.css">
+    <link rel="stylesheet" href="css/gallery.min.css">
     <link rel="shortcut icon" type="image/jpg" href="img/acaochego_logo.svg"/>
 </head>
 <body>
@@ -34,6 +36,7 @@
 
     <!-------- Fotos espaço Acãochego -------->
       <div class="hospedagem">
+      <!--
         <p class="textDestaque">Nossa hospedagem</p>
 
         <img src="img/espaco/imagem1.jpg" alt="espaço 1" class="fotosHotel">
@@ -41,6 +44,48 @@
         <img src="img/espaco/imagem3.jpeg" alt="espaço 1" class="fotosHotel">
         <img src="img/espaco/imagem4.jpg" alt="espaço 1" class="fotosHotel">
         <img src="img/espaco/imagem5.jpg" alt="espaço 1" class="fotosHotel">
+      </div>
+      --> 
+      <p class="textDestaque">Nossa hospedagem</p>
+
+      <div class="gallery autoplay items-5">
+
+        <div id="item-1" class="control-operator"></div>
+        <div id="item-2" class="control-operator"></div>
+        <div id="item-3" class="control-operator"></div>
+        <div id="item-4" class="control-operator"></div>
+        <div id="item-5" class="control-operator"></div>
+
+        <div>
+        <figure class="item">
+          <img src="img/espaco/imagem1.png" alt="espaço 1">
+        </figure>
+
+        <figure class="item">
+          <img src="img/espaco/imagem2.png" alt="espaço 1">
+        </figure>
+
+        <figure class="item">
+          <img src="img/espaco/imagem3.png" alt="espaço 1">
+        </figure>
+
+        <figure class="item">
+          <img src="img/espaco/imagem4.png" alt="espaço 1">
+        </figure>
+
+        <figure class="item">
+          <h1><img src="img/espaco/imagem5.png" alt="espaço 1"></h1>
+        </figure>
+        </div>
+
+        <div class="controls">
+          <a href="#item-1" class="control-button">.</a>
+          <a href="#item-2" class="control-button">.</a>
+          <a href="#item-3" class="control-button">.</a>
+          <a href="#item-4" class="control-button">.</a>
+          <a href="#item-5" class="control-button">.</a>
+        </div>
+
       </div>
      
       <!-------- Depoimentos -------->
