Modificações: 1) Ajustei a incorporação da agenda do Google

--- a/agenda.html
+++ b/agenda.html
@@ -32,7 +32,7 @@
         <div>
         <h1>Nossa disponibilidade</h1>
         </div>
-        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FSao_Paulo&src=YzMyZmMzZDZhMGUxZDgzYTE3Njk2ZjFiMWMzNTUxYzU4NmRlMjBmM2UyYzMxNTMwODRmY2E3ODEwMmUxNDYzZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%233F51B5" style="border-width:0" width="900" height="600" frameborder="0" scrolling="no" class="googleAgenda"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FSao_Paulo&showTz=0&showCalendars=0&showTabs=0&showPrint=0&src=YzMyZmMzZDZhMGUxZDgzYTE3Njk2ZjFiMWMzNTUxYzU4NmRlMjBmM2UyYzMxNTMwODRmY2E3ODEwMmUxNDYzZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%233F51B5" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no" class="googleAgenda"></iframe>
       </div>
 
     <!-------- Eventos no Instagram -------->
