Modificação: Alterei em todas as páginas o footer para ficarem iguais ao index

--- a/sobre.html
+++ b/sobre.html
@@ -55,11 +55,11 @@
   </main>
   
     <!-------- Rodapé -------->
-<footer>
+  <footer>
     <div class="footer">
-        <p>Desenvolvido por <a href="https://caradati.com.br/" target="_blank">Cara da TI</a> &copy;2023</p>
+      <p class="dev-for"><a href="https://caradati.com.br/" target="_blank">Desenvolvido por Cara da TI &copy;2023</a></p>
     </div> 
-</footer>
+  </footer>
 
 </body>
 </html>
