Modificações: 1) Alterei o menu, que antes era abaixo do logo, para ficar ao lado direito em todas as páginas; 2) alterei CSS para comportar essa alteração do menu e ajustei a página sobre

--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
 </head>
 <body>
   <main>
-    <!-------- Logo e nome -------->
+    <!-------- Logo -------->
     <div class="cabecalhoLogo">
       <a href="index.html"><img src="img/acaochego_logo_azul.png" alt="Logo do Acãochego" class="logo"></a>
-    </div>
-
     <!-------- Menu -------->
-
       <ul class="menu">
         <li class="listmenu"><a href="agenda.html">Agenda</a></li>
         <li class="listmenu"><a href="faq.html">FAQ</a></li>
         <li class="listmenu"><a href="sobre.html">Sobre</a></li>
       </ul>
+    </div>
 
     <!-------- Texto descritivo -------->
       <div class="textDescricao">
