--- a/sobre.html
+++ b/sobre.html
@@ -12,23 +12,21 @@
 </head>
 <body>
   <main>
-    <!-------- Logo e nome -------->
-      <div class="cabecalhoLogo">
-        <a href="index.html"><img src="img/acaochego_logo_azul.png" alt="Logo do Acãochego" class="logo"></a>
-      </div>
-
+    <!-------- Logo -------->
+    <div class="cabecalhoLogo">
+      <a href="index.html"><img src="img/acaochego_logo_azul.png" alt="Logo do Acãochego" class="logo"></a>
     <!-------- Menu -------->
-
       <ul class="menu">
         <li class="listmenu"><a href="index.html">Home</a></li>
         <li class="listmenu"><a href="agenda.html">Agenda</a></li>
         <li class="listmenu"><a href="faq.html">FAQ</a></li>
       </ul>
+    </div>
 
-      <div>
+      <div class="divSobre">
         <h1>Quem é Renata Furlan?</h1>
         <img src="img/fotorenata.png" alt="Foto da Renata Ribeiro, propietaria do Acãochego" class="fotoperfilrenata">
-        <p class="textsobre">
+        <p class="textSobre">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non est in nisl venenatis mollis. Nam pretium nibh in facilisis tristique. Integer tempus ipsum non tortor pharetra, vitae consectetur erat imperdiet. Pellentesque rhoncus elementum tortor sit amet tristique. Aenean malesuada elit leo, in vehicula lectus sodales in. Duis imperdiet tellus ut tincidunt ullamcorper. Donec commodo nibh quis tortor vehicula, id posuere mi vulputate. Sed felis nisi, vehicula id nisl luctus, elementum finibus tellus. Curabitur sed tristique ligula. Vivamus ac lectus eget nunc varius dictum.
 
           Fusce nisl libero, euismod vitae est id, semper suscipit nibh. Quisque ac eros non enim faucibus pharetra. Nam malesuada molestie ipsum ut rhoncus. Aenean ut augue eget tellus pharetra accumsan. Nam efficitur urna non tellus tincidunt sagittis. In mauris purus, blandit ac posuere in, aliquet nec massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean congue quam vel posuere porta. Aenean eget hendrerit ipsum, a ullamcorper ex. Donec accumsan est leo, maximus egestas ante tristique quis. Aliquam sed vehicula dolor. Maecenas at sem et sem tincidunt malesuada.
