--- a/faq.html
+++ b/faq.html
@@ -12,18 +12,16 @@
 </head>
 <body>
   <main>
-    <!-------- Logo e nome -------->
-      <div class="cabecalhoLogo">
-        <a href="index.html"><img src="img/acaochego_logo_azul.png" alt="Logo do Acãochego" class="logo"></a>
-      </div>
-
-   <!-------- Menu -------->
-
+    <!-------- Logo -------->
+    <div class="cabecalhoLogo">
+      <a href="index.html"><img src="img/acaochego_logo_azul.png" alt="Logo do Acãochego" class="logo"></a>
+    <!-------- Menu -------->
       <ul class="menu">
         <li class="listmenu"><a href="index.html">Home</a></li>
         <li class="listmenu"><a href="agenda.html">Agenda</a></li>
         <li class="listmenu"><a href="sobre.html">Sobre</a></li>
       </ul>
+    </div>
     
     <!-------- Texto descritivo -------->
       <p class="textDestaque">F.A.Q. - Dúvidas Frequentes</p>
